update: added the swipe navigation in the Teting.kt